--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -31,12 +31,12 @@ zone:
 tone:
   content: "I'm sorry. Your words made sense, but your sarcastic tone did not."
   created_at: <%= 10.minutes.ago %>
-  user: lana
+  user: archer
 
 van:
   content: "Dude, this van's, like, rolling probable cause."
   created_at: <%= 4.hours.ago %>
-  user: lana
+  user: archer
 
 <% 30.times do |n| %>
 micropost_<%= n %>:
